ext/yuni/nany/tests/invalid/missing_brace.ny
# This test has a trailing then clause with no closing brace

function main
{
	if true then
	{
		doSomething
}

